update swagger definition and regenerate code for passing new project/user fields
