# reports_api/swagger_server/controllers/users_controller.py
@@ -2,7 +2,7 @@ from reports_api.response_code import users_controller as rc
 
 
 
-def users_get(start_time=None, end_time=None, user_id=None, user_email=None, project_id=None, slice_id=None, slice_state=None, sliver_id=None, sliver_type=None, sliver_state=None, component_type=None, component_model=None, bdf=None, vlan=None, ip_subnet=None, facility=None, site=None, host=None, exclude_user_id=None, exclude_user_email=None, exclude_project_id=None, exclude_site=None, exclude_host=None, exclude_slice_state=None, exclude_sliver_state=None, page=None, per_page=None):  # noqa: E501
+def users_get(start_time=None, end_time=None, user_id=None, user_email=None, project_id=None, slice_id=None, slice_state=None, sliver_id=None, sliver_type=None, sliver_state=None, component_type=None, component_model=None, bdf=None, vlan=None, ip_subnet=None, facility=None, site=None, host=None, exclude_user_id=None, exclude_user_email=None, exclude_project_id=None, exclude_site=None, exclude_host=None, exclude_slice_state=None, exclude_sliver_state=None, project_type=None, exclude_project_type=None, active=None, page=None, per_page=None):  # noqa: E501
     """Get users
 
     Retrieve a list of users with optional filters. # noqa: E501
@@ -57,6 +57,12 @@ def users_get(start_time=None, end_time=None, user_id=None, user_email=None, pro
     :type exclude_slice_state: List[str]
     :param exclude_sliver_state: Filter by sliver state; allowed values Nascent, Ticketed, Active, ActiveTicketed, Closed, CloseWait, Failed, Unknown, CloseFail
     :type exclude_sliver_state: List[str]
+    :param project_type: Filter by project type; allowed values research, education, maintenance, tutorial
+    :type project_type: List[str]
+    :param exclude_project_type: Exclude by project type; allowed values research, education, maintenance, tutorial
+    :type exclude_project_type: List[str]
+    :param active: 
+    :type active: bool
     :param page: Page number for pagination. Default is 0.
     :type page: int
     :param per_page: Number of records per page. Default is 200.
@@ -71,5 +77,6 @@ def users_get(start_time=None, end_time=None, user_id=None, user_email=None, pro
                         component_type=component_type, ip_subnet=ip_subnet, page=page, per_page=per_page,
                         exclude_user_id=exclude_user_id, exclude_user_email=exclude_user_email,
                         exclude_project_id=exclude_project_id, exclude_site=exclude_site, exclude_host=exclude_host,
-                        exclude_slice_state=exclude_slice_state, exclude_sliver_state=exclude_sliver_state)
+                        exclude_slice_state=exclude_slice_state, exclude_sliver_state=exclude_sliver_state,
+                        project_type=project_type, active=active, exclude_project_type=exclude_project_type)
 
